remove bug on preprocessing

--- a/notebooks/03-final_data_preprocessing.ipynb
+++ b/notebooks/03-final_data_preprocessing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,51 +148,51 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2010-12-11 23:55:00</th>\n",
-       "      <td>0.690</td>\n",
-       "      <td>0.062</td>\n",
-       "      <td>244.16</td>\n",
-       "      <td>2.8</td>\n",
+       "      <th>2010-11-26 20:58:00</th>\n",
+       "      <td>0.946</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>240.43</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2010-12-11 23:56:00</th>\n",
-       "      <td>0.688</td>\n",
-       "      <td>0.060</td>\n",
-       "      <td>243.82</td>\n",
-       "      <td>2.8</td>\n",
+       "      <th>2010-11-26 20:59:00</th>\n",
+       "      <td>0.944</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>240.00</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2010-12-11 23:57:00</th>\n",
-       "      <td>0.688</td>\n",
-       "      <td>0.062</td>\n",
-       "      <td>244.20</td>\n",
-       "      <td>2.8</td>\n",
+       "      <th>2010-11-26 21:00:00</th>\n",
+       "      <td>0.938</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>239.82</td>\n",
+       "      <td>3.8</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2010-12-11 23:58:00</th>\n",
-       "      <td>0.688</td>\n",
-       "      <td>0.062</td>\n",
-       "      <td>244.21</td>\n",
-       "      <td>2.8</td>\n",
+       "      <th>2010-11-26 21:01:00</th>\n",
+       "      <td>0.934</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>239.70</td>\n",
+       "      <td>3.8</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2010-12-11 23:59:00</th>\n",
-       "      <td>0.688</td>\n",
-       "      <td>0.064</td>\n",
-       "      <td>244.65</td>\n",
-       "      <td>2.8</td>\n",
+       "      <th>2010-11-26 21:02:00</th>\n",
+       "      <td>0.932</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>239.55</td>\n",
+       "      <td>3.8</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -211,11 +211,11 @@
        "2007-01-01 00:03:00                2.550                  0.100   241.71   \n",
        "2007-01-01 00:04:00                2.554                  0.100   241.98   \n",
        "...                                  ...                    ...      ...   \n",
-       "2010-12-11 23:55:00                0.690                  0.062   244.16   \n",
-       "2010-12-11 23:56:00                0.688                  0.060   243.82   \n",
-       "2010-12-11 23:57:00                0.688                  0.062   244.20   \n",
-       "2010-12-11 23:58:00                0.688                  0.062   244.21   \n",
-       "2010-12-11 23:59:00                0.688                  0.064   244.65   \n",
+       "2010-11-26 20:58:00                0.946                  0.000   240.43   \n",
+       "2010-11-26 20:59:00                0.944                  0.000   240.00   \n",
+       "2010-11-26 21:00:00                0.938                  0.000   239.82   \n",
+       "2010-11-26 21:01:00                0.934                  0.000   239.70   \n",
+       "2010-11-26 21:02:00                0.932                  0.000   239.55   \n",
        "\n",
        "                     global_intensity  sub_metering_1  sub_metering_2  \\\n",
        "date                                                                    \n",
@@ -225,11 +225,11 @@
        "2007-01-01 00:03:00              10.4             0.0             0.0   \n",
        "2007-01-01 00:04:00              10.4             0.0             0.0   \n",
        "...                               ...             ...             ...   \n",
-       "2010-12-11 23:55:00               2.8             0.0             0.0   \n",
-       "2010-12-11 23:56:00               2.8             0.0             0.0   \n",
-       "2010-12-11 23:57:00               2.8             0.0             0.0   \n",
-       "2010-12-11 23:58:00               2.8             0.0             0.0   \n",
-       "2010-12-11 23:59:00               2.8             0.0             0.0   \n",
+       "2010-11-26 20:58:00               4.0             0.0             0.0   \n",
+       "2010-11-26 20:59:00               4.0             0.0             0.0   \n",
+       "2010-11-26 21:00:00               3.8             0.0             0.0   \n",
+       "2010-11-26 21:01:00               3.8             0.0             0.0   \n",
+       "2010-11-26 21:02:00               3.8             0.0             0.0   \n",
        "\n",
        "                     sub_metering_3  \n",
        "date                                 \n",
@@ -239,11 +239,11 @@
        "2007-01-01 00:03:00             0.0  \n",
        "2007-01-01 00:04:00             0.0  \n",
        "...                             ...  \n",
-       "2010-12-11 23:55:00             0.0  \n",
-       "2010-12-11 23:56:00             0.0  \n",
-       "2010-12-11 23:57:00             0.0  \n",
-       "2010-12-11 23:58:00             0.0  \n",
-       "2010-12-11 23:59:00             0.0  \n",
+       "2010-11-26 20:58:00             0.0  \n",
+       "2010-11-26 20:59:00             0.0  \n",
+       "2010-11-26 21:00:00             0.0  \n",
+       "2010-11-26 21:01:00             0.0  \n",
+       "2010-11-26 21:02:00             0.0  \n",
        "\n",
        "[2053263 rows x 7 columns]"
       ]
@@ -703,40 +703,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "global_active_power        1.348\n",
-       "global_reactive_power      0.000\n",
-       "voltage                  237.500\n",
-       "global_intensity           5.600\n",
-       "sub_metering_1             0.000\n",
-       "sub_metering_2             1.000\n",
-       "sub_metering_3            17.000\n",
-       "Name: 2010-12-11 12:00:00, dtype: float64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "household_consumption_df.loc['2010-12-11 12:00:00']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ True,  True,  True, ...,  True,  True,  True])"
+       "array([ True,  True,  True, ..., False, False, False])"
       ]
      },
      "execution_count": 7,
@@ -765,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +754,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,6 +781,20 @@
     "        HOUSEHOLD_WEATHER_MERGED_PATH\n",
     "    )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
